effacement d'une ancienne version

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Index</title>
+    <title>Document</title>
 </head>
-<body bgcolor="red">
-
-        <iframe src="sommaire.html" name="f1" height="800" width="20%"></iframe>
-        <iframe src="contenu.html" name="f2" height="800" width="75%"></iframe>
-    
+<body bgcolor="#e57373">
+    <center>
+    <iframe src="presentation.html" name="f1" height="200" width="80%" frameborder="0"></iframe>
+    </center>
+    <iframe src="contenu.html" name="f2" height="700" width="75%" frameborder="0"></iframe>
+    <iframe src="sommaire.html" name="f3" height="700" width="20%" frameborder="0"></iframe>
 </body>
 </html>
