--- a/sommaire.html
+++ b/sommaire.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body bgcolor="green">
+<body bgcolor="#ef9a9a">
     <h1>Sommaire</h1>
-    <a href="page2.html" target="f2">Page 2</a><br>
-    <a href="page3.html"target="f2">Page 3</a>
+    <a href="metier1.html" target="f2">Éthicien de l'IA</a><br>
+    <a href="metier2.html" target="f2">AI Trainer</a><br>
+    <a href="metier3.html" target="f2">Voice UX Designer</a><br>
+    <a href="metier4.html" target="f2">Architecte de données pour IA</a><br>
 </body>
 </html>
