déplacement de dossier

--- a/index_principal.html
+++ b/index_principal.html
@@ -11,6 +11,6 @@
     <a href="tp1/index.html">TP 1</a><br>
     <a href="tp2/index.html">TP 2</a><br>
     <a href="tp3/index.html">TP 3</a><br>
-    <a href="index.html">TP 4</a><br>
+    <a href="tp4/index.html">TP 4</a><br>
 </body>
 </html>
