--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <a href="tp2/index.html">TP 2</a><br>
     <a href="tp3/index.html">TP 3</a><br>
     <a href="tp4/index.html">TP 4</a><br>
-    <a href="Mission 2 AP/index.html">Mission 2 AP</a><br>
+    <a href="Mission_2_AP/index.html">Mission 2 AP</a><br>
 </body>
 </html>
+
 
 
