--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <a href="tp4/index.html">TP 4</a><br>
     <a href="Mission_2_AP/index.html">Mission 2 AP</a><br>
     <a href=tp5/index.html>TP5</a><br>
+    <a href=tp6/inscription.html>TP6</a><br>
 </body>
 </html>
+
 
 
 
