--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <a href="Mission_2_AP/index.html">Mission 2 AP</a><br>
     <a href=tp5/index.html>TP5</a><br>
     <a href=tp6/inscription.html>TP6</a><br>
-    <a href=Mission3/mission3.html>Mission 3</a>
+    <a href=Mission3/mission3.html>Mission 3</a><br>
+    <a href=tp7/index.html>TP 7</a>
 </body>
 </html>
+
 
 
 
