--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <a href=tp5/index.html>TP5</a><br>
     <a href=tp6/inscription.html>TP6</a><br>
     <a href=Mission3/mission3.html>Mission 3</a><br>
-    <a href=tp7/index.html>TP 7</a>
+    <a href=tp7/index.html>TP 7</a><br>
+    <a href=tp8/index.html>TP 8</a><br>
 </body>
 </html>
+
 
 
 
