--- a/tp8/index.html
+++ b/tp8/index.html
@@ -42,10 +42,11 @@
     </div>
     <section>
         <footer>
-            <button onclick="location.href='index.html'">
+            <button onclick="location.href='../index.html'">
                 Retour à l'accueil
             </button>
         </footer>
     </section>
 </body>
+
 </html>
