--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <a href=tp8/index.html>TP 8</a><br>
     <a href=mission4.pdf>Mission 4</a><br>
     <a href=tp9/calculatrice.html>TP9</a><br>
+    <a href=tp10/index.html>TP10</a><br>
 </body>
 </html>
+
 
 
 
