--- a/tp2/index.html
+++ b/tp2/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Liste des articles</title>
 </head>
-<body>
-    <center><h1>Pas encore disponible</h1></center>
+<body bgcolor="#91AEC1">
+    <h1>  Présentation des articles  </h1>
+    <font color="red" size="4em">
+    <p>Les articles</p>
+
+    </font>
+
+    <table border="1" width="50%">
+        <tr><td>Casque Arai</td> <td><img src="https://i.ebayimg.com/images/g/lK4AAOSwtqNlbzkY/s-l1200.jpg"  height="200"></td>   </tr>
+        <tr><td>Iphone 16</td> <td><img src="https://img.leboncoin.fr/api/v1/lbcpb1/images/b8/f2/d7/b8f2d78c654ab51efb8bd5f037de265d46c6e4fd.jpg?rule=ad-large" width="200" height="200"></td>   </tr>
+        <tr><td>Clio 3</td> <td><img src="https://img.leboncoin.fr/api/v1/lbcpb1/images/32/36/85/3236851a374614c32f5f0c1ee05089c0def1a9a1.jpg?rule=ad-image" width="200" height="200"></td>   </tr>
+        <tr><td>Ps5</td> <td><img src="https://img.leboncoin.fr/api/v1/lbcpb1/images/7b/67/a2/7b67a2b6f6bc3ce86bfa34f242273c63ddc06b98.jpg?rule=ad-large" width="200" height="200"></td>   </tr>
+    </table>
+        
+    <a href="article1.html">Casque Arai </a>   <br> 
+    <a href="article2.html">Iphone 16</a>  <br>
+    <a href="article3.html">Clio 3</a>   <br>
+    <a href="article4.html">PS5</a>    
 </body>
 </html>
