--- a/tp10/index.html
+++ b/tp10/index.html
@@ -24,7 +24,7 @@
         <button onclick="sous()">-</button>
         <button onclick="div()">/</button><br>
         <button onclick="pair()">Parité</button>
-        <button onclick="perm()">Permuter</button>
+        <button onclick="perm()">Permuter</button><br>
 
         
     
@@ -37,4 +37,5 @@
 </body>
 
 </html>
+
 
