--- a/tp11/index.html
+++ b/tp11/index.html
@@ -14,7 +14,9 @@
     <button onclick="calcul_moyenne()">Calcul de la Moyenne</button>
     <button onclick="verif_age()">Verification Mineur / Majeur</button>
     <button onclick="test_couleur()">Changement de couleur</button>
-    <button onclick="simple_affichage()">Affichage nom et prénom</button>
+    <button onclick="simple_affichage()">Affichage nom et prénom</button><br>
+    <button onclick="location.href='../index.html'">Retour à l'accueil</button>
     </div>
 </body>
+
 </html>
