--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <a href=mission5/index.html>Mission 5</a><br>
     <a href=tp11/index.html>TP 11</a><br>
     <a href=tp12/index.html>TP 12</a><br>
+    <a href=Mission6/index.html>Mission 6</a><br>
 </body>
 </html>
+
 
 
 
