--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <a href=Mission6/index.html>Mission 6</a><br>
     <a href=tp13/index.html>TP 13</a><br>
     <a href=tp14/index.html>TP 14</a><br>
+    <a href=tp16/index.html>TP 16</a><br>
 </body>
 </html>
+
 
 
 
