--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     <a href=tp13/index.html>TP 13</a><br>
     <a href=tp14/index.html>TP 14</a><br>
     <a href=tp16/index.html>TP 16</a><br>
+    <a href=tp18/index.html>TP 18</a><br>
 </body>
 </html>
+
 
 
 
