--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <a href=tp16/index.html>TP 16</a><br>
     <a href=tp18/index.html>TP 18</a><br>
     <a href=tp19/tp19.pdf>TP 19</a><br>
+        <a href=mission9/index.html>Mission 9</a><br>
     <a href=mission10/index.html>Mission 10</a><br>
 </body>
 </html>
+
 
 
 
