--- a/index.html
+++ b/index.html
@@ -1,61 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mon Portfolio - Travaux Web</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <center><h1>Liste des TP Sites Web</h1></center>
-    <a href="tp1/index.html">TP 1</a><br>
-    <a href="tp2/index.html">TP 2</a><br>
-    <a href="tp3/index.html">TP 3</a><br>
-    <a href="tp4/index.html">TP 4</a><br>
-    <a href="Mission_2_AP/index.html">Mission 2 AP</a><br>
-    <a href=tp5/index.html>TP5</a><br>
-    <a href=tp6/inscription.html>TP6</a><br>
-    <a href=Mission3/mission3.html>Mission 3</a><br>
-    <a href=tp7/index.html>TP 7</a><br>
-    <a href=tp8/index.html>TP 8</a><br>
-    <a href=mission4.pdf>Mission 4</a><br>
-    <a href=tp9/calculatrice.html>TP9</a><br>
-    <a href=tp10/index.html>TP10</a><br>
-    <a href=mission5/index.html>Mission 5</a><br>
-    <a href=tp11/index.html>TP 11</a><br>
-    <a href=tp12/index.html>TP 12</a><br>
-    <a href=Mission6/index.html>Mission 6</a><br>
-    <a href=tp13/index.html>TP 13</a><br>
-    <a href=tp14/index.html>TP 14</a><br>
-    <a href=tp16/index.html>TP 16</a><br>
-    <a href=tp18/index.html>TP 18</a><br>
-    <a href=tp19/tp19.pdf>TP 19</a><br>
-        <a href=mission9/index.html>Mission 9</a><br>
-    <a href=mission10/index.html>Mission 10</a><br>
+    <header>
+        <h1>Mon Portfolio : Liste des Travaux Web</h1>
+    </header>
+
+    <div class="container">
+        <ul class="tp-list">
+            <li><a href="tp1/index.html">TP 1</a></li>
+            <li><a href="tp2/index.html">TP 2</a></li>
+            <li><a href="tp3/index.html">TP 3</a></li>
+            <li><a href="tp4/index.html">TP 4</a></li>
+            <li><a href="tp5/index.html">TP 5</a></li>
+            <li><a href="tp6/inscription.html">TP 6</a></li>
+            <li><a href="tp7/index.html">TP 7</a></li>
+            <li><a href="tp8/index.html">TP 8</a></li>
+            <li><a href="tp9/calculatrice.html">TP 9</a></li>
+            <li><a href="tp10/index.html">TP 10</a></li>
+            <li><a href="tp11/index.html">TP 11</a></li>
+            <li><a href="tp12/index.html">TP 12</a></li>
+            <li><a href="tp13/index.html">TP 13</a></li>
+            <li><a href="tp14/index.html">TP 14</a></li>
+            <li><a href="tp16/index.html">TP 16</a></li>
+            <li><a href="tp18/index.html">TP 18</a></li>
+            <li><a href="tp19/tp19.pdf">TP 19</a></li>
+            
+            <li><a href="Mission_2_AP/index.html">Mission 2 AP</a></li>
+            <li><a href="Mission3/mission3.html">Mission 3</a></li>
+            <li><a href="mission4.pdf">Mission 4</a></li>
+            <li><a href="mission5/index.html">Mission 5</a></li>
+            <li><a href="Mission6/index.html">Mission 6</a></li>
+            <li><a href="mission9/index.html">Mission 9</a></li>
+            <li><a href="mission10/index.html">Mission 10</a></li>
+        </ul>
+    </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
